--- a/src/components/MiddleSection.css
+++ b/src/components/MiddleSection.css
@@ -7,3 +7,11 @@
     font-size: 30px;
     flex-grow: 1;
 }
+
+.assignmentTitle{
+    text-align: left;
+}
+.instructions{
+    margin: 0;
+    color: #a0a2af;
+}
