--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
+
 .navMenu{
     background-color: #d84949;
     width: 100%;
@@ -11,24 +12,20 @@
     display: flex;
     flex-direction: row;
     height: 100%;
-    background-color: DodgerBlue;
 }
 
 
 .navMainContainer{
-    background-color: #f1f1f1;
-    margin: 10px;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
+    background-color: #f8f9fa;
+    margin: 0;
+    padding: 10px;
+    text-align: left;
+    font-size: 15px;
     flex-grow: .7;
       
 }
 .middleMainContainer{
-    background-color: #f1f1f1;
-    margin: 10px;
+    background-color: #FFFFFF;
     text-align: center;
-    line-height: 75px;
-    font-size: 30px;
     flex-grow: 1;
 }
