--- a/src/components/LeftMenu.css
+++ b/src/components/LeftMenu.css
@@ -1,10 +1,5 @@
 .navMainContainer{
-    background-color: #f1f1f1;
-    width: 100px;
-    margin: 10px;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
-    flex-grow: 1;
+    min-height: 80vh;
+    max-width: 200px;
       
 }
