--- a/src/components/MiddleSection.css
+++ b/src/components/MiddleSection.css
@@ -18,3 +18,10 @@
 .info{
     text-align: left;
 }
+.mainDiv{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
