home page greeting

--- a/src/components/MiddleSection.css
+++ b/src/components/MiddleSection.css
@@ -25,3 +25,16 @@
     flex-direction: column;
     justify-content: center;
 }
+.assignmentDiv{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 3rem;
+    
+}
+.startAssigment{
+    height: 100%;
+    flex-direction: column;
+    align-content: flex-end;
+}
